--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
-  "name": "claudekit-intro-video",
-  "version": "1.0.0",
-  "description": "ClaudeKit promotional video built with Remotion",
+  "name": "remotion-videos",
+  "private": true,
+  "workspaces": ["packages/*", "videos/*"],
   "scripts": {
-    "dev": "remotion studio",
-    "build": "remotion render src/index.ts ClaudekitIntro out/claudekit-intro.mp4",
-    "upgrade": "remotion upgrade"
-  },
-  "dependencies": {
-    "@remotion/cli": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remotion": "^4.0.0"
+    "dev": "bun run --filter '*' dev",
+    "build": "bun run --filter '*' build"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
