--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,7 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
-  },
-  "include": ["src/**/*"]
+    "noEmit": true,
+    "declaration": true,
+    "declarationMap": true
+  }
 }
